# tged

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: color.rs  file.rs  lib.rs  macros.rs  main.rs  prelude.rs  screen.rs  settings.rs  view.rs
src/screen/: interact.rs  settings.rs  view.rs
src/terminal/: cursor.rs  mod.rs  term.rs
src/view/: bottombar.rs  filetree.rs  help.rs  mainview.rs  menu.rs  msgbox.rs  settings.rs  topbar.rs
