[package]
name = "tged"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
getch-rs = "0.2.0"
nix = "0.29.0"
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0.40"
proc-macro2 = "1.0.94"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[lib]
proc-macro = true
