[package]
name = "tged"
version = "0.1.0"
edition = "2021"
authors = ["NazrinDuck"]
description = "A flexiable tui editor"
readme = "README.md"
homepage = "https://nazrinduck.github.io/"
repository = "https://github.com/NazrinDuck/tged"
keywords = ["tui", "demo", "editor"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
getch-rs = "0.2.0"
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0.40"
proc-macro2 = "1.0.94"
signal-hook = {version = "0.3.17", features = ["extended-siginfo"]}
crossbeam-channel = "0.5.14"
widestring = "1.2.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[lib]
proc-macro = true
